# ai-devops

./: .gitignore  README.md  pyproject.toml
src/k8s_auto_dev_platform/: __init__.py  cli.py  deployer.py  orchestrator.py  template_manager.py  test_runner.py  utils.py
src/k8s_auto_dev_platform/templates/: __init__.py  base.py  simple_service.py
tests/: test_platform.py
